--- a/themes/binario/static/css/main.css
+++ b/themes/binario/static/css/main.css
@@ -42,7 +42,7 @@ body {
 	line-height: 1.4;
 	color: #ddd;
 	text-align: left;
-	background-color: #1b1b1b;
+	background-color: #ffffff;
 	-webkit-font-smoothing: antialiased;
 }
 
@@ -421,8 +421,8 @@ mark {
 .header {
 	margin: 0 0 .3125rem;
 	overflow: auto;
-	background-color: #2a2a2a;
-	border-color: #333;
+	background-color: #ffffff;
+	border-color: #ffffff;
 	border-style: solid;
 	border-width: 0 0 1px;
 }
@@ -431,7 +431,7 @@ mark {
 	padding: .875rem;
 	margin: .1875rem 0;
 	color: #eee;
-	background-color: #2a2a2a;
+	background-color: #d6d2d2;
 	border-color: #333;
 	border-style: solid;
 	border-width: 1px 0;
@@ -707,7 +707,7 @@ button:not(:-moz-focusring):focus > .main-nav__btn-box {
 	flex: 1 0 auto;
 	margin: 0;
 	overflow: auto;
-	color: #c3c3c3;
+	color: #000000;
 }
 
 .post__content p:last-child {
